--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <nav>
   <a routerLink="/dashboard">Dashboard</a>
   <a routerLink="/heroes">Heroes</a>
+  <a routerLink="/users">Users</a>
+  <a routerLink="/groups">Groups</a>
 </nav>
 <router-outlet></router-outlet>
-<app-messages></app-messages>
