--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,3 +42,12 @@ h1 {
   * {
     font-family: Arial, Helvetica, sans-serif;
   }
+html, body { 
+  height: 100%; 
+
+}
+body { 
+  margin: 5rem; 
+  padding-bottom: 5rem;
+  font-family: Roboto, "Helvetica Neue", sans-serif; 
+}
