--- a/src/app/modules/user-table/components/user-table/user-table.component.html
+++ b/src/app/modules/user-table/components/user-table/user-table.component.html
@@ -1,2 +1,22 @@
 <h1>Users page</h1>
-<app-common-table [dataSource]="users" [displayedColumns]="columns"></app-common-table>
+
+<mat-form-field class="search-form-field">
+  <input matInput [(ngModel)]="searchKey" placeholder="search" (keyup)="applyFilter(searchKey)">
+</mat-form-field>
+
+<table mat-table [dataSource]="dataSource" matSort >
+
+  <ng-container *ngFor="let col of displayedColumns" [matColumnDef]="col">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort"> {{col}} </th>
+    <td mat-cell *matCellDef="let element"> {{element[col]}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+</table>
+
+<mat-paginator [pageSizeOptions]="[3, 5, 10]"
+showFirstLastButtons 
+aria-label="Select page">
+</mat-paginator>
