--- a/src/app/modules/user-table/components/user-table/user-table.component.scss
+++ b/src/app/modules/user-table/components/user-table/user-table.component.scss
@@ -4,3 +4,32 @@ h1 {
     font-weight: bold;
     margin-bottom: 5rem;
 }
+
+table {
+  width: 80%;
+  margin: auto;
+  border: 1px solid gray;
+
+  th {
+    font-size: 1.5rem;
+    font-weight: bold;
+    border-bottom: 2px solid;
+    text-align: center;
+  }
+
+  td {
+    text-align: center;
+  }
+}
+
+.mat-paginator {
+  display: block;
+  width: 80%;
+  margin: auto;
+}
+
+.mat-form-field {
+  display: block;
+  width: 80%;
+  margin: auto;
+}
