--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,53 +1,90 @@
-/* Application-wide Styles */
 h1 {
-    color: #369;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 250%;
-  }
-  h2, h3 {
-    color: #444;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: lighter;
-  }
-  body {
-    margin: 2em;
-  }
-  body, input[type="text"], button {
-    color: #333;
-    font-family: Cambria, Georgia, serif;
-  }
-  button {
-    background-color: #eee;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    color: black;
-    font-size: 1.2rem;
-    padding: 1rem;
-    margin-right: 1rem;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-  }
-  button:hover {
-    background-color: black;
-    color: white;
-  }
-  button:disabled {
-    background-color: #eee;
-    color: #aaa;
-    cursor: auto;
-  }
-  
-  /* everywhere else */
-  * {
-    font-family: Arial, Helvetica, sans-serif;
-  }
+  text-align: center;
+  font-size: 3rem !important;
+  font-weight: bold !important;
+  margin-bottom: 5rem !important;
+  color: #369;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h2, h3 {
+  color: #444;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
+}
 html, body { 
   height: 100%; 
 
 }
+
 body { 
   margin: 5rem; 
   padding-bottom: 5rem;
   font-family: Roboto, "Helvetica Neue", sans-serif; 
+}
+
+body, input[type="text"], button {
+  color: #333;
+  font-family: Cambria, Georgia, serif;
+}
+
+button {
+  background-color: #eee;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  color: black;
+  font-size: 1.2rem;
+  padding: 1rem;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+
+button:hover {
+  background-color: black;
+  color: white;
+}
+
+button:disabled {
+  background-color: #eee;
+  color: #aaa;
+  cursor: auto;
+}
+  
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+table {
+  width: 80%;
+  margin: auto;
+  border: 1px solid gray;
+
+  th {
+    font-size: 1.5rem !important;
+    font-weight: bold !important;
+    border-bottom: 2px solid !important;
+    text-align: center !important;
+  }
+
+  td {
+    text-align: center;
+  }
+}
+
+.mat-paginator {
+  display: block;
+  width: 80%;
+  margin: auto;
+}
+
+.mat-form-field {
+  display: block !important;
+  width: 80%;
+  margin: auto;
+}
+
+.mat-sort-header-container {
+  justify-content: center;
 }
